Added new BGM alongside incorporating clickable display names in the chatroom!

--- a/views/chatroom.html
+++ b/views/chatroom.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chatroom - Wired Genesis</title>
     <link rel="stylesheet" href="chatroom.css" />
-    <audio id="bgMusic" src="audio/lain-ost.mp3" autoplay loop></audio>
+    <audio id="bgMusic" src="audio/chatroom-bgm.mp3" autoplay loop></audio>
     <audio id="bgMusic" src="audio/macintosh-whisper.mp3" autoplay></audio>
 </head>
 <body>
