--- a/views/library.ejs
+++ b/views/library.ejs
@@ -1,3 +1,4 @@
+<!-- Library.ejs -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,7 +8,7 @@
   <title>Library - Wired Genesis</title>
   <link rel="stylesheet" href="/chatroom.css" />
   <link rel="stylesheet" href="library.css">
- <audio id="bgMusic" src="audio/lain-ost.mp3" autoplay loop></audio>
+ <audio id="bgMusic" src="audio/library-bgm.mp3" autoplay loop></audio>
  <audio id="bgMusic" src="audio/macintosh-whisper-library.mp3" autoplay></audio>
 </head>
 <body>
@@ -24,7 +25,7 @@
     <!-- title up top -->
     <h1>Library</h1>
     <!-- serial experiments lain quote because of course -->
-    <p class="quote">"If you're not remembered, then you never existed"</p>
+    <p class="quote">"If you're not remembered, then you never existed."</p>
 
     <!-- this is the search bar -->
     <form method="GET" action="/library" class="search-section" id="searchForm">
