--- a/views/chatroom-room.html
+++ b/views/chatroom-room.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Chatroom</title>
   <link rel="stylesheet" href="chatroom-room.css" />
+  <!-- <audio id="bgMusic" src="audio/chatroom.mp3" autoplay loop></audio> -->
 </head>
 <body>
   <header>
